--- a/curso/assets/mobirise/css/mbr-additional.css
+++ b/curso/assets/mobirise/css/mbr-additional.css
@@ -905,61 +905,16 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
-.cid-rWDmnhyozN {
-  padding-top: 15px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
+.cid-s1mWRzK6n6 {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #ca1c1c;
 }
-.cid-rWDmnhyozN .list-group-item {
-  padding: .75rem 3.25rem;
-}
-.cid-rWDmnhyozN .plan {
-  word-break: break-word;
-  position: relative;
-  max-width: 300px;
-  padding-right: 0;
-  padding-left: 0;
+.cid-s1mWRzK6n6 .mbr-section-subtitle {
   color: #767676;
 }
-.cid-rWDmnhyozN .plan .list-group-item {
-  position: relative;
-  -webkit-justify-content: center;
-  justify-content: center;
-  background-color: transparent;
-  border: 0;
-}
-.cid-rWDmnhyozN .plan .list-group-item::after {
-  position: absolute;
-  bottom: 0;
-  left: 20%;
-  width: 60%;
-  height: 2px;
-  content: "";
-  background-color: #eaeaea;
-}
-.cid-rWDmnhyozN .plan .list-group-item:last-child::after {
-  display: none;
-}
-.cid-rWDmnhyozN .plan.favorite {
-  background-color: #fff;
-  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.07);
-}
-.cid-rWDmnhyozN .plan-header {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.cid-rWDmnhyozN .price-figure {
-  font-weight: 700;
-  color: #232323;
-}
-.cid-rWDmnhyozN .price-value {
-  font-weight: 700;
-  vertical-align: top;
-}
-@media (max-width: 550px) {
-  .cid-rWDmnhyozN .price-figure {
-    font-size: 4.25rem;
-  }
+.cid-s1mWRzK6n6 H2 {
+  color: #ffffff;
 }
 .cid-rWE26dmnCo {
   padding-top: 30px;
@@ -1014,6 +969,62 @@ section.lazy-placeholder:after {
 }
 @media (max-width: 550px) {
   .cid-rWE26dmnCo .price-figure {
+    font-size: 4.25rem;
+  }
+}
+.cid-rWDmnhyozN {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rWDmnhyozN .list-group-item {
+  padding: .75rem 3.25rem;
+}
+.cid-rWDmnhyozN .plan {
+  word-break: break-word;
+  position: relative;
+  max-width: 300px;
+  padding-right: 0;
+  padding-left: 0;
+  color: #767676;
+}
+.cid-rWDmnhyozN .plan .list-group-item {
+  position: relative;
+  -webkit-justify-content: center;
+  justify-content: center;
+  background-color: transparent;
+  border: 0;
+}
+.cid-rWDmnhyozN .plan .list-group-item::after {
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+  width: 60%;
+  height: 2px;
+  content: "";
+  background-color: #eaeaea;
+}
+.cid-rWDmnhyozN .plan .list-group-item:last-child::after {
+  display: none;
+}
+.cid-rWDmnhyozN .plan.favorite {
+  background-color: #fff;
+  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.07);
+}
+.cid-rWDmnhyozN .plan-header {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-rWDmnhyozN .price-figure {
+  font-weight: 700;
+  color: #232323;
+}
+.cid-rWDmnhyozN .price-value {
+  font-weight: 700;
+  vertical-align: top;
+}
+@media (max-width: 550px) {
+  .cid-rWDmnhyozN .price-figure {
     font-size: 4.25rem;
   }
 }
@@ -2143,15 +2154,15 @@ section.lazy-placeholder:after {
     font-size: 4.25rem;
   }
 }
-.cid-rWE2ywUdw3 {
+.cid-s1q9sTMHiN {
   padding-top: 30px;
-  padding-bottom: 90px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
-.cid-rWE2ywUdw3 .list-group-item {
+.cid-s1q9sTMHiN .list-group-item {
   padding: .75rem 3.25rem;
 }
-.cid-rWE2ywUdw3 .plan {
+.cid-s1q9sTMHiN .plan {
   word-break: break-word;
   position: relative;
   max-width: 300px;
@@ -2159,14 +2170,14 @@ section.lazy-placeholder:after {
   padding-left: 0;
   color: #767676;
 }
-.cid-rWE2ywUdw3 .plan .list-group-item {
+.cid-s1q9sTMHiN .plan .list-group-item {
   position: relative;
   -webkit-justify-content: center;
   justify-content: center;
   background-color: transparent;
   border: 0;
 }
-.cid-rWE2ywUdw3 .plan .list-group-item::after {
+.cid-s1q9sTMHiN .plan .list-group-item::after {
   position: absolute;
   bottom: 0;
   left: 20%;
@@ -2175,27 +2186,27 @@ section.lazy-placeholder:after {
   content: "";
   background-color: #eaeaea;
 }
-.cid-rWE2ywUdw3 .plan .list-group-item:last-child::after {
+.cid-s1q9sTMHiN .plan .list-group-item:last-child::after {
   display: none;
 }
-.cid-rWE2ywUdw3 .plan.favorite {
+.cid-s1q9sTMHiN .plan.favorite {
   background-color: #fff;
   box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.07);
 }
-.cid-rWE2ywUdw3 .plan-header {
+.cid-s1q9sTMHiN .plan-header {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-.cid-rWE2ywUdw3 .price-figure {
+.cid-s1q9sTMHiN .price-figure {
   font-weight: 700;
   color: #232323;
 }
-.cid-rWE2ywUdw3 .price-value {
+.cid-s1q9sTMHiN .price-value {
   font-weight: 700;
   vertical-align: top;
 }
 @media (max-width: 550px) {
-  .cid-rWE2ywUdw3 .price-figure {
+  .cid-s1q9sTMHiN .price-figure {
     font-size: 4.25rem;
   }
 }
