--- a/curso/assets/mobirise/css/mbr-additional.css
+++ b/curso/assets/mobirise/css/mbr-additional.css
@@ -2358,6 +2358,15 @@ section.lazy-placeholder:after {
   text-decoration: line-through;
   color: #767676;
 }
+.cid-s1ryqq2FNx {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-s1ryqq2FNx .mbr-text,
+.cid-s1ryqq2FNx blockquote {
+  color: #767676;
+}
 .cid-rO9IfyyLXV {
   padding-top: 0px;
   padding-bottom: 90px;
@@ -3341,4 +3350,246 @@ section.lazy-placeholder:after {
 }
 .cid-rWDL0AeHAP .btn {
   margin: 0 0 .5rem 0;
+}
+.cid-s1rxaJULz7 {
+  padding-top: 75px;
+  padding-bottom: 15px;
+  background-color: #efefef;
+}
+.cid-s1rxaJULz7 .mbr-section-btn > * {
+  margin: 0;
+}
+.cid-s1rxaJULz7 h4 {
+  font-weight: 500;
+}
+.cid-s1rxaJULz7 p {
+  color: #232323;
+}
+.cid-s1rxaJULz7 .aside-content {
+  -webkit-flex-basis: 100%;
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.cid-s1rxaJULz7 .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-s1rxaJULz7 .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-s1rxaJULz7 .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-s1rxaJULz7 .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-s1rxaJULz7 .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-s1rxaJULz7 .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-s1rxaJULz7 .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-s1rxaJULz7 .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-s1rxaJULz7 .cost {
+  text-decoration: line-through;
+  color: #767676;
+}
+.cid-s1rxEiGIUG {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-s1rxEiGIUG .mbr-text,
+.cid-s1rxEiGIUG blockquote {
+  color: #767676;
+}
+.cid-s1rxaLkvGh {
+  padding-top: 0px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/11975-2000x2000.jpg");
+}
+.cid-s1rxaLkvGh .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-s1rxaLkvGh .mbr-text {
+  color: #767676;
+  text-align: center;
+}
+.cid-s1rxaLkvGh .card {
+  display: flex;
+  position: relative;
+  justify-content: center;
+}
+.cid-s1rxaLkvGh .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-s1rxaLkvGh .card-wrapper .card-img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.cid-s1rxaLkvGh .card-wrapper .card-img .mbr-overlay {
+  background-color: #efefef;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-s1rxaLkvGh .card-wrapper .card-img .mbr-section-btn {
+  display: flex;
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  margin: auto;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+}
+.cid-s1rxaLkvGh .card-wrapper .card-img img {
+  width: 100%;
+  height: 100%;
+}
+.cid-s1rxaLkvGh .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.cid-s1rxaLkvGh .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
+.cid-s1rxaLkvGh .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
+}
+.cid-s1rxaLkvGh .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-s1rxaLkvGh .popup-btn .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-s1rxaLkvGh .popup-btn .mbr-section-btn {
+  height: 100%;
+  display: flex !important;
+  opacity: 0;
+}
+.cid-s1rxaLkvGh .popup-btn:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-s1rxaLkvGh .popup-btn:hover .mbr-section-btn {
+  opacity: 1;
+}
+.cid-s1rxaOpBRY {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-s1rxaOpBRY .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-s1rxaOpBRY .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-s1rxaPSh3E {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-image: url("../../../assets/images/11975-2000x2000.jpg");
+}
+.cid-s1rxaPSh3E .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-s1rxaPSh3E .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-s1rxaPSh3E .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-s1rxaPSh3E .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-s1rxaPSh3E .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-s1rxaPSh3E .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-s1rxaPSh3E .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-s1rxaPSh3E .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-s1rxaPSh3E .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-s1rxaPSh3E .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-s1rxaPSh3E .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-s1rxaPSh3E .media-container-row .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-s1rxaPSh3E .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-s1rxaPSh3E .media-container-row .row-copirayt p {
+  width: 100%;
 }
